--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,50 +1,80 @@
-name: Build APK Success
+name: Build Android APK
 
 on:
   push:
+    branches: [ main, master, develop ]
+    tags: [ 'v*' ]
+  pull_request:
     branches: [ main, master ]
   workflow_dispatch:
+
+env:
+  GRADLE_OPTS: "-Dorg.gradle.daemon=false"
 
 jobs:
   build:
     runs-on: ubuntu-latest
     
+    strategy:
+      matrix:
+        variant: [leanback, mobile]
+        abi: [arm64_v8a, armeabi_v7a]
+    
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-      
-    - name: Setup Java
+      with:
+        submodules: recursive
+        
+    - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
-        java-version: 17
+        java-version: '17'
         distribution: 'temurin'
         
+    - name: Setup Android SDK
+      uses: android-actions/setup-android@v3
+      
+    - name: Cache Gradle
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.gradle/caches
+          ~/.gradle/wrapper
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+        restore-keys: |
+          ${{ runner.os }}-gradle-
+          
+    - name: Setup signing config
+      if: secrets.ANDROID_KEYSTORE_BASE64
+      run: |
+        mkdir -p ./app/keystore
+        echo "${{ secrets.ANDROID_KEYSTORE_BASE64 }}" | base64 -d > ./app/keystore/release.jks
+      shell: bash
+      
     - name: Make gradlew executable
       run: chmod +x ./gradlew
       
-    - name: Fix compilation errors
-      run: |
-        echo "🔧 修复编译错误..."
-        
-        # 简单方法：重命名有问题的文件
-        find ./app/src -name "CastDialog.java" -type f -exec mv {} {}.disabled \;
-        find ./app/src -name "CastActivity.java" -type f -exec mv {} {}.disabled \;
-        
-        echo "✅ 已禁用有问题的 Cast 文件"
-      
-    - name: Create keystore
-      run: |
-        mkdir -p keystore
-        keytool -genkey -v -keystore keystore/release.jks -keyalg RSA -keysize 2048 -validity 10000 -alias xmbox -dname "CN=Android,O=Android,C=US" -storepass xmbox123 -keypass xmbox123
-      
     - name: Build APK
       run: |
-        ./gradlew clean
-        ./gradlew assembleMobileArm64_v8aRelease --no-daemon
-        
-    - name: Upload APK
+        ./gradlew assemble${{
+          matrix.variant.charAt(0).toUpperCase() + matrix.variant.slice(1)
+        }}${{
+          matrix.abi.charAt(0).toUpperCase() + matrix.abi.slice(1)
+        }}Release \
+          --no-daemon \
+          --stacktrace \
+          -Porg.gradle.parallel=true
+          
+    - name: Upload APK artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: mobile-apk
-        path: app/build/outputs/apk/**/release/*.apk
+        name: ${{ matrix.variant }}-${{ matrix.abi }}-apk
+        path: app/build/outputs/apk/${{ matrix.variant }}/${{ matrix.abi }}/*.apk
         retention-days: 30
+        
+    - name: Upload to Release
+      if: startsWith(github.ref, 'refs/tags/v')
+      uses: softprops/action-gh-release@v1
+      with:
+        files: app/build/outputs/apk/*/release/*.apk
